# onto-vae

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests.ipynb  vignette.ipynb
onto_vae/: __init__.py  cvae_model.py  fast_data_loader.py  model.py  modules.py  ontobj.py  regularizer.py  trim.py  utils.py  vae_model.py
onto_vae/data/: gene_term_mapping.txt  pbmc_sample_annot.csv  pw.obo
